Fixed Spacing on the images, Added CV as a downloadable option and made it clickable, commented some unnecessary codes.

--- a/base.css
+++ b/base.css
@@ -3,6 +3,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;   /* Removed the scroll bar in the side of screen */
 }
 
 #bg-video {
@@ -15,6 +16,10 @@ html, body {
   z-index: -1;         /* sends it behind the content */
 }
 
+.infoSection{
+  margin-left: 100px;
+  margin-bottom: 100px;
+}
  
   
   /*IMAGES FOR FRONT PAGE AND KEYFRAMES*/
@@ -58,6 +63,7 @@ html, body {
     align-self: end;
     margin-bottom: 45px;
     margin-left: 95px;
+    margin-top: 100px;
   }
   
   #littleAdam2 {
@@ -99,16 +105,19 @@ html, body {
     font-family: "Press Start 2P";
     white-space: nowrap;
     margin-left: 25%;
+    margin-top: 15px;
   }
   
   .titleBox > img {
     width: 600px;
-    height: 150px;
+    height: 200px;
+    
   }
   
   .titleBox > p {
     margin-top: -1px;
-    font-size: 26px;
+    font-size: 24px;
+    margin-left: 28px;
   }
 
   .skillName1{
@@ -495,7 +504,7 @@ html, body {
     justify-self: center;
   }
   
-  .facebook {
+  /* .facebook {
     grid-area: 1/1/2/2;
   }
   
@@ -505,7 +514,7 @@ html, body {
   
   .codepen {
     grid-area: 1/3/2/4;
-  }
+  } */
   
   .github {
     grid-area: 1/4/2/5;
